
	- Removed multibyte stuff since client does not know about encoding
	  in the backend.
	- Fixed quoting bug reported by Sascha Demetrio (sd@b-comp.de).

Mon Oct 30 15:27:12 CET 2000

	- Synced gram.y and preproc.y. 

Tue Oct 31 16:09:55 CET 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> fixing some
	  parser bugs.

Fri Nov  3 11:34:43 CET 2000

	- Synced pgc.l with scan.l.
	- Synced gram.y and preproc.y.

Sat Nov  4 17:42:43 CET 2000

	- Added patch by Christof Petig to fix several small bugs.

Thu Nov  9 14:40:18 CET 2000

	- Synced gram.y and preproc.y. 
	- Synced keyword.c.
	- Added just another patch by Christof Petig.

Sat Nov 18 16:28:11 CET 2000

	- Synced gram.y and preproc.y.         

Mon Dec 18 12:27:52 CET 2000

	- Synced gram.y and preproc.y.
	- Synced keyword.c.
	- Added several small patches from Christof.

Fri Dec 22 13:33:31 CET 2000

	- Fixed bug in a connect statement using varchars.
	- Synced gram.y and preproc.y.   

Mon Jan 22 17:56:02 CET 2001

	- Synced gram.y and preproc.y.   
	- Added #include "postgres.h" to pgc.l.

Tue Jan 23 08:54:14 CET 2001

	- Moved database name handling to libecpg.

Thu Jan 25 21:14:38 CET 2001

	- Synced gram.y and preproc.y.     

Wed Jan 31 17:11:04 CET 2001

	- Added two bug fixes by Christof Petig.

Mon Feb 19 08:25:14 CET 2001

	- Synced gram.y and preproc.y.

Mon Feb 26 15:22:04 CET 2001

	- Fixed misplaced variables FoundInto and QueryIsRule.

Thu Mar 29 10:23:05 CEST 2001

	- Applied bug fix in ecpgtype.h by Adriaan Joubert.

Mon Apr  2 10:16:10 CEST 2001

	- Synced scan.l and pgc.l.

Thu Apr  5 10:11:35 CEST 2001

	- Fixed long long problem.
	- Set ecpg version to 2.8.0. 
	- Set library version to 3.2.0.

Fri Jun  1 08:13:25 CEST 2001

	- Synced preproc.y with gram.y.
	- Synced pgc.l with scan.l.
	- Synced keyword.c.

Wed Jun 13 14:39:12 CEST 2001

	- Synced preproc.y with gram.y.  
	- Applied bug fix by John Summerfield.
	- Set ecpg version to 2.9.0.
	- Set library version to 3.3.0.